--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,6 +3,10 @@
 	src: url("/fonts/logo.ttf");
 }
 
+:root {
+	--footer-height: 126px;
+}
+
 main {
 	min-height: 100vh;
 	position: relative;
@@ -11,7 +15,7 @@ main {
 main::after {
 	content: "";
 	display: block;
-	height: 100px;
+	height: var(--footer-height);
 }
 
 footer {
@@ -19,5 +23,10 @@ footer {
 	bottom: 0;
 	left: 0;
 	right: 0;
-	height: 100px;
+	height: var(--footer-height);
+}
+
+a {
+	color: inherit;
+	text-decoration: none;
 }
